test_results.txt
============================= test session starts =============================
platform win32 -- Python 3.12.6, pytest-8.4.2, pluggy-1.5.0 -- C:\Python312\python.exe
cachedir: .pytest_cache
metadata: {'Python': '3.12.6', 'Platform': 'Windows-11-10.0.26120-SP0', 'Packages': {'pytest': '8.4.2', 'pluggy': '1.5.0'}, 'Plugins': {'asyncio': '1.1.0', 'cov': '4.1.0', 'html': '4.1.1', 'metadata': '3.1.1', 'mock': '3.12.0', 'timeout': '2.4.0', 'anyio': '4.8.0'}, 'JAVA_HOME': 'C:\\Program Files\\Java\\jdk-21'}
rootdir: D:\Code\Novel-Engine
configfile: pytest.ini
plugins: asyncio-1.1.0, cov-4.1.0, html-4.1.1, metadata-3.1.1, mock-3.12.0, timeout-2.4.0, anyio-4.8.0
asyncio: mode=Mode.STRICT, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 2461 items / 1 error

=================================== ERRORS ====================================
__________________ ERROR collecting tests/test_term_guard.py __________________
C:\Users\k7407\AppData\Roaming\Python\Python312\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\k7407\AppData\Roaming\Python\Python312\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python312\Lib\importlib\__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\k7407\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\k7407\AppData\Roaming\Python\Python312\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python312\Lib\ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "D:\Code\Novel-Engine\tests\test_term_guard.py", line 186
E       Novel Engine_violations = [v for v in violations if v.term == "legacy franchise"]
E             ^^^^^^^^^^^^^^^^^
E   SyntaxError: invalid syntax
============================== warnings summary ===============================
ai_testing\interfaces\service_contracts.py:83
  D:\Code\Novel-Engine\ai_testing\interfaces\service_contracts.py:83: PytestCollectionWarning: cannot collect test class 'TestScenario' because it has a __init__ constructor (from: ai_testing/test_scenarios/novel_engine_test.py)
    class TestScenario(BaseTestModel):

ai_testing\interfaces\service_contracts.py:32
  D:\Code\Novel-Engine\ai_testing\interfaces\service_contracts.py:32: PytestCollectionWarning: cannot collect test class 'TestType' because it has a __init__ constructor (from: ai_testing/test_scenarios/novel_engine_test.py)
    class TestType(str, Enum):

ai_testing\tests\integration\test_comprehensive_integration.py:18
  D:\Code\Novel-Engine\ai_testing\tests\integration\test_comprehensive_integration.py:18: PytestUnknownMarkWarning: Unknown pytest.mark.requires_services - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    pytestmark = pytest.mark.requires_services

src\__init__.py:20
  D:\Code\Novel-Engine\src\__init__.py:20: DeprecationWarning: Importing from src.core.emergent_narrative is deprecated. Please use: from src.core.narrative import EmergentNarrativeEngine, ...
    from .core.emergent_narrative import EmergentNarrativeEngine

playwright_ai_validation_test.py:76
  D:\Code\Novel-Engine\playwright_ai_validation_test.py:76: PytestCollectionWarning: cannot collect test class 'TestResult' because it has a __init__ constructor (from: playwright_ai_validation_test.py)
    @dataclass

scripts\test_migration_utilities.py:17
  D:\Code\Novel-Engine\scripts\test_migration_utilities.py:17: PytestCollectionWarning: cannot collect test class 'TestMigrationUtilities' because it has a __init__ constructor (from: scripts/test_migration_utilities.py)
    class TestMigrationUtilities:

scripts\test_migration_validator.py:21
  D:\Code\Novel-Engine\scripts\test_migration_validator.py:21: PytestCollectionWarning: cannot collect test class 'TestMigrationValidator' because it has a __init__ constructor (from: scripts/test_migration_validator.py)
    class TestMigrationValidator:

contexts\orchestration\infrastructure\monitoring\tracing.py:191
  D:\Code\Novel-Engine\contexts\orchestration\infrastructure\monitoring\tracing.py:191: DeprecationWarning: Call to deprecated method __init__. (Since v1.35, the Jaeger supports OTLP natively. Please use the OTLP exporter instead. Support for this exporter will end July 2023.) -- Deprecated since version 1.16.0.
    jaeger_exporter = JaegerExporter(

contexts\orchestration\api\turn_api.py:386
  D:\Code\Novel-Engine\contexts\orchestration\api\turn_api.py:386: DeprecationWarning: 
          on_event is deprecated, use lifespan event handlers instead.
  
          Read more about it in the
          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
          
    @app.on_event("startup")

C:\Python312\Lib\site-packages\fastapi\applications.py:4495
C:\Python312\Lib\site-packages\fastapi\applications.py:4495
  C:\Python312\Lib\site-packages\fastapi\applications.py:4495: DeprecationWarning: 
          on_event is deprecated, use lifespan event handlers instead.
  
          Read more about it in the
          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
          
    return self.router.on_event(event_type)

contexts\orchestration\api\turn_api.py:392
  D:\Code\Novel-Engine\contexts\orchestration\api\turn_api.py:392: DeprecationWarning: 
          on_event is deprecated, use lifespan event handlers instead.
  
          Read more about it in the
          [FastAPI docs for Lifespan Events](https://fastapi.tiangolo.com/advanced/events/).
          
    @app.on_event("shutdown")

tests\test_character_system_comprehensive.py:695
  D:\Code\Novel-Engine\tests\test_character_system_comprehensive.py:695: PytestUnknownMarkWarning: Unknown pytest.mark.character - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    pytestmark = [pytest.mark.character, pytest.mark.unit]

..\..\mnt\d\Code\Novel-Engine\tests\test_integration_comprehensive.py:758
  /mnt/d/Code/Novel-Engine/tests/test_integration_comprehensive.py:758: PytestUnknownMarkWarning: Unknown pytest.mark.system - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html

..\..\mnt\d\Code\Novel-Engine\tests\test_integration_comprehensive.py:758
  /mnt/d/Code/Novel-Engine/tests/test_integration_comprehensive.py:758: PytestUnknownMarkWarning: Unknown pytest.mark.e2e - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html

..\..\mnt\d\Code\Novel-Engine\tests\test_story_generation_comprehensive.py:898
  /mnt/d/Code/Novel-Engine/tests/test_story_generation_comprehensive.py:898: PytestUnknownMarkWarning: Unknown pytest.mark.story - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html

..\..\mnt\d\Code\Novel-Engine\tests\test_story_generation_comprehensive.py:898
  /mnt/d/Code/Novel-Engine/tests/test_story_generation_comprehensive.py:898: PytestUnknownMarkWarning: Unknown pytest.mark.narrative - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ===========================
ERROR tests/test_term_guard.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
======================= 17 warnings, 1 error in 21.08s ========================
